--- a/main.html
+++ b/main.html
@@ -3,11 +3,16 @@
 <html>
 
 <head>
+	 <title>Pseudo-Elements Example</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="container">
+        This is the main content of the container.
+    </div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
