--- a/main.html
+++ b/main.html
@@ -9,10 +9,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="container">
-        This is the main content of the container.
+	 <div id="container">
+        This is the main container element
     </div>
-
     <script type="text/javascript" src="./script.js">
 </script>
 
